<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TimeAndPlace!</string>
    <string name="app_name">TimeAndPlace</string>
    <string name="add_button">Add an Event</string>
    <string name="view_button">View events</string>
    <string name="name">Name:</string>
    <string name="Starttime">Start time:</string>
    <string name="Endtime">End time:</string>
    <string name="location">Location:</string>
    <string name="info">Info:</string>
    <string name="no_events">No Registered Events</string>
    <string name="num_events">Number of Events: </string>
    <string name="alarm_test_button">Alarm Test!</string>
    <string name="cancel_alarm_test_button">Alarm cancel test!</string>
    <string name="event_test_button">Event og db test</string>
    <string name="service_name">TAPService</string>
    <string name="button_start_service_test">Start service test</string>
    <string name="button_stop_service_test">Stop service test</string>
    
</resources>
