<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<Button android:text="@string/add_button" 
		android:id="@+id/addButton" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:onClick="AddEvent">
		</Button>
<Button android:text="@string/view_button" 
		android:id="@+id/viewButton" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:onClick="ViewEvent">
		</Button>
<Button android:text="@string/alarm_test_button" 
		android:id="@+id/alarm_test" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:onClick="testAlarm">
		</Button>
<Button android:text="@string/cancel_alarm_test_button" 
		android:id="@+id/alarm_cancel_test" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:onClick="cancelAlarmTest">
		</Button>		
</LinearLayout>
